Added day-25 on 4th April

--- a/day-25/index.html
+++ b/day-25/index.html
@@ -6,10 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<title>World Countries Data</title>
-	
+
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto+Condensed:wght@300&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="./css/style.css" />
 </head>
 
@@ -31,7 +33,7 @@
 			</div>
 		</div>
 	</main>
- 
+
 	<script src="./data/countries_data.js"></script>
 	<script src="./scripts/main.js"></script>
 
