--- a/day-25/index.html
+++ b/day-25/index.html
@@ -25,8 +25,8 @@
 
 		<div class="wrapper">
 			<div class="graph-buttons">
-				<button class="population">Population</button>
-				<button class="languages">Languages</button>
+				<button class="population">Languages</button>
+				<button class="languages">Population</button>
 			</div>
 			<h4 class="graph-title"></h4>
 			<div class="graphs">
